Closed
Bug 813278
Opened 13 years ago
Closed 13 years ago
JSVAL_TO_OBJECT called on string in TimeZoneSettingObserver
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(blocking-basecamp:+, firefox18 fixed, firefox19 fixed, firefox20 fixed)
RESOLVED
FIXED
blocking-basecamp | + |
People
(Reporter: jgilbert, Assigned: jgilbert)
References
Details
Attachments
(1 file)
4.13 KB,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
This asserts and crashes in DEBUG builds, and should not be done. I am told JSStrings are not JSObjects.
![]() |
Assignee | |
Comment 1•13 years ago
|
||
Add an overload for JSAutoCompartment for JSString and use it.
Attachment #683282 -
Flags: review?(bobbyholley+bmo)
Comment 2•13 years ago
|
||
Comment on attachment 683282 [details] [diff] [review]
patch
Seems fine to me, but bouncing to luke just in case.
Attachment #683282 -
Flags: review?(bobbyholley+bmo) → review?(luke)
![]() |
||
Updated•13 years ago
|
Attachment #683282 -
Flags: review?(luke) → review+
![]() |
Assignee | |
Comment 4•13 years ago
|
||
Assignee: nobody → jgilbert
Status: NEW → ASSIGNED
![]() |
||
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
blocking-basecamp: --- → ?
![]() |
||
Comment 6•13 years ago
|
||
Basecamp blocking which needs to be merged into Aurora and Beta.
blocking-basecamp: ? → +
Comment 7•13 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•