Bug 813278 - Overload JSAutoCompartment for TimeZoneSettingObserver - r=luke